@@ -1,28 +1,72 @@
 plugins {
-    id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.3.70'
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.0.8'
+    id 'org.openjfx.javafxplugin' version '0.0.9'
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.3.70'
+    id 'com.google.protobuf' version '0.8.8'
 }
 
 group 'org.example'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
+
+mainClassName = 'MyApp'
+applicationName = 'CatGame'
+targetCompatibility = 11
+sourceCompatibility = 11
+
+def javafxModules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing', 'javafx.media' ]
+run {
+    doFirst {
+        jvmArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', javafxModules.join(',')
+        ]
+    }
+}
 
 repositories {
     mavenCentral()
     maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
     jcenter()
 }
-mainClassName = 'MyApp'
+
 
 javafx {
     version = "12"
-    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing', 'javafx.media' ]
+    modules = javafxModules
 }
 
+
+ext.protobuf_version = "3.11.1"
+ext.grpc_version = "1.28.1" // CURRENT_GRPC_VERSION
+ext.grpc_kotlin_version = "0.1.1" // CURRENT_GRPC_KOTLIN_VERSION
+
+protobuf {
+    protoc { artifact = "com.google.protobuf:protoc:$protobuf_version" }
+    plugins {
+        // Specify protoc to generate using kotlin protobuf plugin
+        grpc {
+            artifact = "io.grpc:protoc-gen-grpc-java:$grpc_version"
+        }
+        // Specify protoc to generate using our grpc kotlin plugin
+        grpckt {
+            artifact = "io.grpc:protoc-gen-grpc-kotlin:$grpc_kotlin_version"
+        }
+    }
+    generateProtoTasks {
+        all().each { task ->
+            task.plugins {
+                // Generate Java gRPC classes
+                grpc { }
+                // Generate Kotlin gRPC using the custom plugin from library
+                grpckt { }
+            }
+        }
+    }
+}
+
+apply plugin: 'com.google.protobuf'
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
@@ -31,11 +75,30 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.61"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.20.0"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5'
-}
 
+    implementation "com.google.protobuf:protobuf-java:$protobuf_version"
+    implementation "com.google.protobuf:protobuf-java-util:$protobuf_version"
+
+    implementation "io.grpc:grpc-netty-shaded:$grpc_version"
+    implementation "io.grpc:grpc-netty:$grpc_version"
+    implementation "io.grpc:grpc-protobuf:$grpc_version"
+    implementation "io.grpc:grpc-stub:$grpc_version"
+    implementation "io.grpc:grpc-kotlin-stub:$grpc_kotlin_version"
+
+    compile 'javax.annotation:jsr250-api:1.0'
+}
+sourceSets {
+    main {
+        kotlin {
+            srcDirs 'build/generated/source/proto/main/grpckt'
+            srcDirs 'build/generated/source/proto/main/grpc'
+            srcDirs 'build/generated/source/proto/main/java'
+        }
+    }
+}
 compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions.jvmTarget = "11"
 }
 compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions.jvmTarget = "11"
 }
